--- a/spring-boot-web/src/main/resources/templates/charts.html
+++ b/spring-boot-web/src/main/resources/templates/charts.html
@@ -3,14 +3,14 @@
 <head>
 <title>Zookeeper DashBoard</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link th:href="@{~/css/bootstrap.min.css}" rel="stylesheet">
-<link th:href="@{~/css/bootstrap-responsive.min.css}" rel="stylesheet">
+<link th:href="@{./css/bootstrap.min.css }" rel="stylesheet">
+<link th:href="@{./css/bootstrap-responsive.min.css }" rel="stylesheet">
 <!-- 
     <link th:href="@{http://fonts.googleapis.com/css?family=Open+Sans:400italic,600italic,400,600}"
         rel="stylesheet">
      -->
-<link th:href="@{~/css/font-awesome.css}" rel="stylesheet">
-<link th:href="@{~/css/style.css}" rel="stylesheet">
+<link th:href="@{./css/font-awesome.css }" rel="stylesheet">
+<link th:href="@{./css/style.css }" rel="stylesheet">
 </head>
 <body>
 	<div class="navbar navbar-fixed-top">
